<resources>
    <string name="app_name">Intendencia</string>

    //Login
    <string name="Login_titulo">Login</string>
    <string name="etUsuario">Usuario</string>
    <string name="etContraseña">Contraseña</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnCancelar">Cancelar</string>


    <string name="title_activity_inicio">Inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Systema de Prefectura</string>
    <string name="nav_header_subtitle">Fime.uanl@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_titulo_admi">Administracion</string>
    <string name="nav_titulo_pref">Prefectos</string>
    <string name="nav_mensaje">Enviar Mensajes</string>
    <string name="nav_rondin">Rondin</string>
    <string name="nav_reporteR">Reportes Rondin</string>
    <string name="nav_reporteU">Reportes Usuarios</string>
    <string name="nav_horario">Horario</string>
    <string name="nav_registro">Registro</string>

    <string name="action_Configuraciones">Configuraciones</string>
    <string name="action_Salir">Salir</string>


    <string name="action_inicio_titulo"><b>Systema de Prefectura</b></string>
    <string name="title_activity_rondin">Rondin</string>


    //registro
    <string name="etId">Id</string>
    <string name="tvTurno">Turno</string>
    <string name="tvAccesoNivel">Nivel de Acceso</string>
    <string name="tvTitulo">Registro de Usuarios</string>
    <string name="etNombre">Nombre</string>
    <string name="etApellidos">Apellidos</string>

    <string name="etContra">Contraseña</string>
    <string name="tvArea">Area: </string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnCancelarU">Cancelar</string>


    //rondin
    <string name="tvIncidencias">Registrar Incidencias</string>
    <string name="tvSubArea">SubArea</string>
    <string name="tvPrefectoRondin">Jose Perales Castelar</string>
    <string name="btnRegistrarRondin">Registrar</string>
    <string name="btnCancelarRondin">Cancelar</string>
    <string name="etIdRondin">Id</string>

    <string name="tvRondin">Rondin</string>
    <string name="cbpiso">Piso</string>
    <string name="cbpizarron">Pizarron</string>
    <string name="cbescritorio">Escritorio</string>
    <string name="cbbasura">Basura</string>
    <string name="cbbanco">Banco</string>


    //reporte USUARIOS
    <string name="tvtituloReporteUsuario">Buscar usuario por ID</string>
    <string name="etIdRU">Id</string>
    <string name="etNombreRU">Nombre</string>
    <string name="etApellidoRU">Apellido</string>
    <string name="etAreaRU">Area</string>
    <string name="etTurnoRU">Turno</string>
    <string name="btnBuscarRU">Buscar</string>
    <string name="btnActualizarRU">Actualizar</string>
    <string name="btnEliminarRU">Eliminar</string>


    //mensajes
    <string name="tvtituloMensajes">Area de Mensajes</string>
    <string name="etMensaje">Escriba aqui ...</string>
    <string name="etAsunto">Asunto</string>
    <string name="btnEnviarMensaje">Enviar Mensajes</string>

</resources>
