<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/nav_titulo_pref">
    <menu>
        <item
            android:id="@+id/nav_rondin"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_rondin" />
        <item
            android:id="@+id/nav_mensaje"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_mensaje" />
    </menu>
    </item>

    <item android:title="@string/nav_titulo_admi">
        <menu>

            <item
                android:id="@+id/nav_reporte"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/nav_reporte" />
            <item
                android:id="@+id/nav_horario"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/nav_horario" />
            <item
                android:id="@+id/nav_registro"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_registro" />
        </menu>
    </item>

</menu>
