<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Rondin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tvRondin"
                android:textAlignment="center"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/etIdRondin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:hint="@string/etIdRondin"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">



                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tvArea"
                    android:textSize="20sp"/>

                <Spinner
                    android:id="@+id/sp1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/etSubArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:hint="@string/tvSubArea"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvPrefectoRondin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/tvPrefectoRondin"
                android:textSize="20sp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tvIncidencias"
                android:textAlignment="center"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/cbPiso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="Piso"
                android:text="@string/cbpiso"
                tools:ignore="OnClick" />

            <EditText
                android:id="@+id/etPiso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:visibility="invisible" />

            <CheckBox
                android:id="@+id/cbPizarron"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Pizarron"
                android:text="@string/cbpizarron"
                tools:ignore="OnClick" />

            <EditText
                android:id="@+id/etPizarron"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:visibility="invisible" />

            <CheckBox
                android:id="@+id/cbEscritorio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Escritorio"
                android:text="@string/cbescritorio"
                tools:ignore="OnClick" />

            <EditText
                android:id="@+id/etEscritorio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:visibility="invisible" />

            <CheckBox
                android:id="@+id/cbBasura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Basura"
                android:text="@string/cbbasura"
                tools:ignore="OnClick" />

            <EditText
                android:id="@+id/etBasura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:visibility="invisible" />

            <CheckBox
                android:id="@+id/cbBanco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Banco"
                android:text="@string/cbbanco"
                tools:ignore="OnClick" />

            <EditText
                android:id="@+id/etBanco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >

                <Button
                    android:id="@+id/btnRegistrarRondin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="btnRegistrarRondin"
                    android:text="@string/btnRegistrarRondin" />

                <Button
                    android:id="@+id/btnCancelarRondin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnCancelarRondin" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>